delete semaphore, create queue